resources/tests/invalid_syntax/statement_break.ct
//`Statement 'break' can only appear inside a loop!
//1
fn main()->i64: break;